<resources>
    <string name="app_name">Reminder Management System</string>
    <string name="welcome_message">Welcome to the Reminder Application %1$s</string>
    <string name="date">Today is %1$s, %2$d of %3$s %4$d</string>
    <string name="enter_username_hint">Enter Username</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Your have been logged out</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="thank_you">Thank You</string>
    <string name="tnx_done">Your transaction is confirmed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>