<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".fragments.sign_up_login_logout_confirm.Confirm">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tnx_done" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

</LinearLayout>